Closed Bug 411194 Opened 18 years ago Closed 18 years ago

XForms testsuite fails

Categories

(Core Graveyard :: XForms, defect)

x86
All
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: doronr, Assigned: doronr)

Details

(Keywords: fixed1.8.1.12)

Attachments

(1 file)

Code was removed
Attachment #295829 - Flags: review?(aaronr)
to be clear, this patch fixes the fact that some of the mozilla/extensions/schema-validation/tests/schema-complex-test.html tests are failing.
Attachment #295829 - Flags: review?(aaronr) → review+
and more importantly, that the code was there and then removed by a mega patch somehow
Attachment #295829 - Flags: review?(Olli.Pettay)
Comment on attachment 295829 [details] [diff] [review] the patch to fix the issue >@@ -4761,6 +4770,7 @@ > rv = elm->GetAttribute(aAttrName, attrValue); > NS_ENSURE_SUCCESS(rv, rv); > } >+ } I assume this and the relevant block get aligned properly when checked in.
Attachment #295829 - Flags: review?(Olli.Pettay) → review+
fixed indentation and checked into trunk for Doron.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Whiteboard: xf-to-branch
checked into 1.8 branch via bug 410239. Also fixed the schema testcases on 1.8 branch since they still had doron's machine hardcoded in them.
Keywords: fixed1.8.1.12
Whiteboard: xf-to-branch
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: