[XForms] NPOTDB schema validation testsuite fails. Bug 411194, p=doronr r=olli+aaronr